  accept a Throwable argument.

- Added an ice_staticId method to generated PrxHelper classes.

- Fixed a bug in slice2java in which a floating point default value
  could cause a compile error.

- Fixed a bug where Ice.ServerIdleTime wouldn't consistently shutdown
  servers after the given period of inactivity.


C# Changes
==========

- Added support for the .NET Compact Framework.

- Fixed bugs in the generated code that caused naming conflicts when
  using a Slice module named 'System'.

- Added an ice_staticId method to generated PrxHelper classes.

- Fixed a bug in the generated code when a Slice class uses the
  property mapping and declares default values for its members.


Python Changes
==============

- Fixed bug where None was not recognized as a keyword.


Ruby Changes
============

- Fixed a bug in the Ice extension that would cause an ArgumentError
  to be raised when attempting to print a byte sequence whose value is
  a string that contains null bytes.


PHP Changes
===========

- Fixed a bug that caused 'undefined symbol IcePHP__t_XXX' errors when
  Ice.php or a generated file is included from a non-global scope.

- slice2php now generates 'require_once' statements corresponding to
  Slice #include directives.

- Fixed a bug in the Ice extension that caused Ice-related INI
  settings to be ignored.


======================================================================
Changes since version 3.4.0
======================================================================


General Changes
===============

- Added the new property Freeze.DbEnv.<db>.LockFile and changed the
  dumpdb and transformdb utilities so that they can be run safely on
  a database environment that is currently open in another process.

- Changed the Glacier2 helper classes to cache the client category.

- Added the ability to use underscores in Slice identifiers. See the
  release notes for important information on this change.
